--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ fjs.parentNode.insertBefore(js, fjs);
 			<div class="container-fluid">
 				<p>DataArbitrage is a program that generates money by selling our personal data, then uses that money to purchase fake social media accounts. DataArbitrage then takes the data from the fake social media accounts and automatically sells it.  This new money goes right back into buying new social media accounts!  DataArbitrage will keep on functioning until the value of useful data will be completely diluted because of such an abundance of fake social media data.</p>
 			</div>
-			<div class="container-fluid definition">
+			<div class="definition col-md-12">
 				<h3>ar&#149;bi&#149;trage</h3>
 				<h4>\'&auml;r-b&#601;-,tr&auml;szh\</h4>
 				<p>business : the practice of buying something (such as foreign money, gold, etc.) in one place and selling it almost immediately in another place where it is worth more.</p>
@@ -128,8 +128,17 @@ fjs.parentNode.insertBefore(js, fjs);
 				<p>In order to create fake data, we need fake accounts. Current fake profiles will create lots of noise, but because they're mass produced copies of each other, tech companies are getting smarter and smarter at weeding them out.</p>
 				<p>We need something a bit more real.</p>
 				<p>Our engineers are developing the Data Arbitrage Bot, or ArbiBot, for short. Using state-of-the-art research in artificial intelligence, ArbiBots live on your computer and fake social media interaction by posting, liking, and tweeting.</p>
+				<br>
+				<br>
+				<br>
+				<div class="imageFrame">
+					<img src="img/arbibot.svg">
+				</div>
+				<br>
+				<br>
+				<br>
 				<p>But unlike bots today, ArbiBots will learn how to fake being human over time. By watching your interactions online, it'll grow and develop a personality over time. As the ArbiBots social network grows over time, they'll become smarter and harder to distinguish from real users, polluting the value of real data. </p>
-				<a class="btn btn-lg btn-primary btn-block" href="" role="button" disabled="disabled">DOWNLOAD
+				<a class="btn btn-lg btn-primary btn-block" href="" role="button" disabled="disabled">DOWNLOAD AVAILABLE SOON
 				</a>
 
 			</div>
@@ -177,6 +186,7 @@ fjs.parentNode.insertBefore(js, fjs);
 			</div>
 	</div>
 	<div class="container-fluid col-md-12 myFooter">
+		<H4>Copyright Data Arbitrage 2014</H4>
 	</div>
 
 
