--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 
 <body>
 	<a href="dataArbitrage/index.html">Data Arbitrage</a>
-	<a href="riplle/index.html">Ripple</a>
+	<a href="ripple/index.html">Ripple</a>
 	<a href="engn1010/index.html">Black Diamond</a>
 </body>
