--- a/ripple/index.html
+++ b/ripple/index.html
@@ -1,35 +1,10 @@
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<!-- <link rel="stylesheet" type="text/css" href="css/navbar.css"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-	<nav class="navbar navbar-default navbar-fixed-top navbar-custom ">
-
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-			<span class="sr-only">Toggle navigation</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="#"><img src="img/name-1.png" class="img-responsive"></a>
-		</div>
-
-
-		<div class="container-fluid navbar-right">
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav">
-					<li><a href="#about">About</a></li>
-					<li><a href="#team">The Team</a></li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-
 	<div class="jumbotron stretch-background" style="background-image: url('img/pvdbackground.jpg');">
 		<div class="container-fluid page" id-"landing">
 			<div class="container-fluid landing">
@@ -40,68 +15,21 @@
 		</div>
 	</div>
 
-	<div class="container-fluid page" id="about">
+
+	<div class="container-fluid page inverted" id="contact">
 		<div class="col-md-offset-2 col-md-8">
-			<h2>How does it work?</h2>
-			
-			<img src="http://blogs.sas.com/content/sastraining/files/2013/04/infographic_template.png" class="img-responsive">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis nunc vehicula, finibus sapien at, congue sem. Proin et ante non justo imperdiet pharetra vitae id dolor. Phasellus facilisis metus quis magna sollicitudin euismod. Pellentesque placerat sollicitudin porttitor. </p>
-		</div>
-	</div>
-
-	<div class="container-fluid page inverted" id="team">
-		<div class="col-md-offset-2 col-md-8">
-			<h2>Meet the team</h2>
-			<div class="col-md-4 profile">
-				<img src="http://thefoodinnovationnexus.org/commun/img/about/team-warshay-danny.jpg" class="img-responsive img-circle">
-				<h3>Name McName</h3>
-				<h4>Position</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis nunc vehicula, finibus sapien at, congue sem. Proin et ante non justo imperdiet pharetra vitae id dolor. Phasellus facilisis metus quis magna sollicitudin euismod. Pellentesque placerat sollicitudin porttitor. </p>
-			</div>
-			<div class="col-md-4 profile">
-				<img src="http://thefoodinnovationnexus.org/commun/img/about/team-warshay-danny.jpg" class="img-responsive img-circle">
-				<h3>Name McName</h3>
-				<h4>Position</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis nunc vehicula, finibus sapien at, congue sem. Proin et ante non justo imperdiet pharetra vitae id dolor. Phasellus facilisis metus quis magna sollicitudin euismod. Pellentesque placerat sollicitudin porttitor. </p>
-			</div>
-			<div class="col-md-4 profile">
-				<img src="http://thefoodinnovationnexus.org/commun/img/about/team-warshay-danny.jpg" class="img-responsive img-circle">
-				<h3>Name McName</h3>
-				<h4>Position</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis nunc vehicula, finibus sapien at, congue sem. Proin et ante non justo imperdiet pharetra vitae id dolor. Phasellus facilisis metus quis magna sollicitudin euismod. Pellentesque placerat sollicitudin porttitor. </p>
-			</div>
-
-		</div>
-	</div>
-
-	<div class="container-fluid page" id="contact">
-		<div class="col-md-offset-2 col-md-8">
-			<h2>Contact Us</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis nunc vehicula, finibus sapien at, congue sem. Proin et ante non justo imperdiet pharetra vitae id dolor. </p>
-			<br>
-			<br>
-			<div class="container-fluid">
-				<div class="col-sm-2"><a href=""><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/F_icon.svg/2000px-F_icon.svg.png" class="img-responsive"></a></div>
-				<div class="col-sm-2"><a href=""><img src="https://g.twimg.com/Twitter_logo_blue.png" class="img-responsive"></a></div>
-				<div class="col-sm-2"><a href=""><img src="http://princessclub.info/images/insta_logo.png" class="img-responsive"></a></div>
-			</div>
-			<br>
-			<br>
-
-			<div class="container-fluid">
-				<h3>Mailing List</h3>
-				<form>
-					<div class="form-group">
-						<div class="col-sm-10">
-							<input type="email" class="form-control" id="inputEmail3" placeholder="john@ripple.com">
-							<br>
-						</div>
-						<div class="col-sm-2">
-							<button type="submit" class="btn btn-default">Keep Me Updated!</button>
-						</div>
+			<h2>Keep me updated!</h2>
+			<form>
+				<div class="form-group">
+					<div class="col-sm-10">
+						<input type="email" class="form-control" id="inputEmail3" placeholder="john@ripple.com">
+						<br>
 					</div>
-				</form>
-			</div>
+					<div class="col-sm-2">
+						<button type="submit" class="btn btn-default">Add me</button>
+					</div>
+				</div>
+			</form>
 
 
 		</div>
