--- a/ripple/index.html
+++ b/ripple/index.html
@@ -16,22 +16,19 @@
 	</div>
 
 
-	<div class="container-fluid page inverted" id="contact">
+	<div class="container-fluid page stretch-background inverted" id="contact" style="background-image: url('img/waves.gif');">
 		<div class="col-md-offset-2 col-md-8">
-			<h2>Keep me updated!</h2>
 			<form>
 				<div class="form-group">
-					<div class="col-sm-10">
-						<input type="email" class="form-control" id="inputEmail3" placeholder="john@ripple.com">
+					<div class="col-m-12">
+						<input type="email" class="form-control myInput" id="inputEmail3" placeholder="make waves with us @ripple.com">
 						<br>
 					</div>
-					<div class="col-sm-2">
-						<button type="submit" class="btn btn-default">Add me</button>
+					<div class="col-m-2 ">
+						<button type="submit" class="btn btn-primary mySubmit">Keep me updated</button>
 					</div>
 				</div>
 			</form>
-
-
 		</div>
 	</div>
 
