--- a/ripple/index.html
+++ b/ripple/index.html
@@ -21,11 +21,11 @@
 			<form>
 				<div class="form-group">
 					<div class="col-m-12">
-						<input type="email" class="form-control myInput" id="inputEmail3" placeholder="make waves with us @ripple.com">
+						<input type="email" class="form-control myInput" id="inputEmail3" placeholder="make waves with us ">
 						<br>
 					</div>
 					<div class="col-m-2 ">
-						<button type="submit" class="btn btn-primary mySubmit">Keep me updated</button>
+						<button type="submit" class="btn btn-primary mySubmit">Join Waitlist</button>
 					</div>
 				</div>
 			</form>
