--- a/ripple/index.html
+++ b/ripple/index.html
@@ -16,16 +16,17 @@
 	</div>
 
 
-	<div class="container-fluid page stretch-background inverted" id="contact" style="background-image: url('img/waves.gif');">
+	<div class="container-fluid page stretch-background" id="contact" style="background-image: url('img/waves.gif');">
 		<div class="col-md-offset-2 col-md-8">
 			<form>
 				<div class="form-group">
 					<div class="col-m-12">
-						<input type="email" class="form-control myInput" id="inputEmail3" placeholder="make waves with us ">
+						<h1>make waves with us</h1>
+						<input type="email" class="form-control myInput" id="inputEmail3" placeholder="john@ripple.com">
 						<br>
 					</div>
 					<div class="col-m-2 ">
-						<button type="submit" class="btn btn-primary mySubmit">Join Waitlist</button>
+						<button type="submit" class="btn btn-primary mySubmit">join waitlist</button>
 					</div>
 				</div>
 			</form>
