--- a/ripple/index.html
+++ b/ripple/index.html
@@ -19,17 +19,40 @@
 
 	<div class="container-fluid page stretch-background" id="contact" style="background-image: url('img/waves.gif');">
 		<div class="col-md-offset-2 col-md-8">
-			<form>
-				<div class="form-group">
-					<div class="col-m-12">
-						<h1>make waves with us</h1>
-						<input type="email" class="form-control myInput" id="inputEmail3" placeholder="john@ripple.com">
-						<br>
+
+			<form action="https://docs.google.com/a/brown.edu/forms/d/1boGaq-aeXE-XvYM2gp5Lx2uu2J_dOKY7rGA3ZjHsJ7Y/formResponse" method="POST" id="ss-form" target="_self" onsubmit="">
+				<ol role="list" class="ss-question-list" style="padding-left: 0">
+					<div class="ss-form-question errorbox-good" role="listitem">
+						<div dir="ltr" class="ss-item  ss-text">
+							<div class="ss-form-entry">
+								<label class="ss-q-item-label" for="entry_1013775622">
+									<h1>make waves with us</h1>
+									<div class="ss-q-help ss-secondary-text " dir="ltr"></div>
+								</label>
+								<input type="text" name="entry.1013775622" value="" class="form-control myInput" id="entry_1013775622" dir="auto" aria-label="make waves with us  " title="">
+								<br>
+								<div class="error-message" id="1101891865_errorMessage">
+								</div>
+							</div>
+						</div>
 					</div>
-					<div class="col-m-2 ">
-						<button type="submit" class="btn btn-primary mySubmit">join waitlist</button>
+					<input type="hidden" name="draftResponse" value="[,,&quot;385580746382844685&quot;]
+			">
+					<input type="hidden" name="pageHistory" value="0">
+					<input type="hidden" name="fbzx" value="385580746382844685">
+
+					<div class="ss-item ss-navigate">
+						<table id="navigation-table">
+							<tbody>
+								<tr>
+									<td class="ss-form-entry goog-inline-block" id="navigation-buttons" dir="ltr">
+										<input type="submit" name="submit" value="join waitlist" id="ss-submit" class="btn btn-primary mySubmit">
+									</td>
+								</tr>
+							</tbody>
+						</table>
 					</div>
-				</div>
+				</ol>
 			</form>
 		</div>
 	</div>
