--- a/ripple/index.html
+++ b/ripple/index.html
@@ -17,7 +17,7 @@
 	</div>
 
 
-	<div class="container-fluid page stretch-background" id="contact" style="background-image: url('img/waves.gif');">
+	<div class="container-fluid page stretch-background inverted" id="contact" style="background-image: url('img/waves.gif');">
 		<div class="col-md-offset-2 col-md-8">
 
 			<form action="https://docs.google.com/a/brown.edu/forms/d/1boGaq-aeXE-XvYM2gp5Lx2uu2J_dOKY7rGA3ZjHsJ7Y/formResponse" method="POST" id="ss-form" target="_self" onsubmit="">
