--- a/ripple/thankyou.html
+++ b/ripple/thankyou.html
@@ -12,6 +12,7 @@
 				<img src="img/icon-1.png" class="img-responsive center-block" alt="Responsive image">
 				<!-- <img src="img/name-1.png" class="img-responsive center-block"> -->
 				<h1>Thanks for signing up!</h1>
+				<a class="btn btn-primary mySubmit" href="index.html" role="button">back to homepage</a>
 			</div>
 		</div>
 	</div>
