more form things

--- a/ripple/thankyou.html
+++ b/ripple/thankyou.html
@@ -11,7 +11,8 @@
 			<div class="container-fluid landing">
 				<img src="img/icon-1.png" class="img-responsive center-block" alt="Responsive image">
 				<!-- <img src="img/name-1.png" class="img-responsive center-block"> -->
-				<h1>Thanks for signing up!</h1>
+				<h1>thanks for signing up!</h1>
+				<h2>you'll be the first to know when we're live</h2>
 				<a class="btn btn-primary mySubmit" href="index.html" role="button">back to homepage</a>
 			</div>
 		</div>
