--- a/ripple/index.html
+++ b/ripple/index.html
@@ -33,7 +33,7 @@
 									<h1>make waves with us</h1>
 									<div class="ss-q-help ss-secondary-text " dir="ltr"></div>
 								</label>
-								<input type="text" name="entry.1013775622" value="jordan@ripple.com" class="form-control myInput" id="entry_1013775622" dir="auto" aria-label="make waves with us " title="">
+								<input type="text" name="entry.1013775622"  onfocus="if (this.value=='ripplemobileapp@gmail.com') this.value = ''" value="ripplemobileapp@gmail.com" class="form-control myInput" id="entry_1013775622" dir="auto" aria-label="make waves with us " title="">
 								<br>
 								<div class="error-message" id="1101891865_errorMessage">
 								</div>
@@ -50,7 +50,7 @@
 							<tbody>
 								<tr>
 									<td class="ss-form-entry goog-inline-block" id="navigation-buttons" dir="ltr">
-										<input type="submit" name="submit" value="join email list" id="ss-submit" class="btn btn-primary mySubmit">
+										<input type="submit" name="submit" value="join waitlist" id="ss-submit" class="btn btn-primary mySubmit">
 									</td>
 								</tr>
 							</tbody>
